Resolves: tdf#96369 don't superscript ordinals for mixed text and numbers

e.g. 5th is ok, but foo5th is not

this is basically a regression from

commit 17e6b8fd05af8fff86847c0ef1e8cc9ad013a1bd
Date:   Thu Apr 7 13:33:48 2011 +0200

where the older code would only do the conversion if the string
before the number was comprised of non-letters, so go back
to that logic.

Change-Id: I928c365eb11891e78331bbd165dbdb9541ac0361
(cherry picked from commit 776e2e2635487523cd1757f382f54487b36b5ad3)